# RayTracingInC

./: .gitignore  CMakeLists.txt  README.md  RayTracing.cpp  RayTracing.h  RayTracing.hpp  aabb.hpp  box.hpp  camera.h  camera.hpp  colour.h  colour.hpp  constant_medium.hpp  hittable.h  hittable.hpp  hittable_list.h  hittable_list.hpp  image.ppm  image_18_3.ppm  image_bunny_1.ppm  image_dragon.ppm  image_dragon_1.ppm  image_final_0.ppm  image_final_1.ppm  image_final_14.ppm  image_final_14_1.ppm  image_final_15.ppm  image_final_15_Pretty.ppm  image_final_2.ppm  image_final_2_1.ppm  image_final_3.ppm  image_final_4.ppm  image_final_5.ppm  image_final_6.ppm  image_final_7.ppm  image_final_9.ppm  image_test.ppm  interval.h  interval.hpp  material.h  (+17 more)
images/: image.ppm  image_3.ppm  image_5.ppm  image_6_1.ppm  image_final_0.ppm  image_final_2.ppm  image_final_3.ppm  image_final_4.ppm  image_final_6.ppm
images/Old/: image_2.ppm  image_4.ppm  image_6.ppm  image_9.ppm
objects/: box.hpp  bvh.hpp  constant_medium.hpp  hittable.hpp  hittable_list.hpp  model.hpp  quad.hpp  sphere.hpp
